--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   sqflite: ^2.3.0
   path_provider: ^2.1.1
+  flutter_dotenv: ^5.1.0
   http: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,6 +53,9 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+assets:
+  - .env
 
 # The following section is specific to Flutter packages.
 flutter:
